# cinch-nested-example

./: .gitmodules  .travis.yml  REAMDE.md
app/: CMakeLists.txt  app.cc
arch/: gnu.cmake
config/: documentation.cmake  packages.cmake  project.cmake
doc/: doxygen.conf.in  ugconfig.py
doc/doxygen/images/: README.md
src/: CMakeLists.txt
src/mylib/: library.cmake  mylib.h
src/mylib/example_src/: CMakeLists.txt  Example.cc  Example.h  example.cc  example.h  example_unit.cc
src/mylib/example_src/test/: example_unit.cc  io.blessed  io.cc  testAdd.pf  testSuites.inc
src/ourlib/example_dir/: CMakeLists.txt  print.h
src/ourlib/utils/: CMakeLists.txt  utils.cc  utils.h
